Fixes to some warnings and Readme.